--- a/android/app/src/main/res/layout/image_row.xml
+++ b/android/app/src/main/res/layout/image_row.xml
@@ -1,13 +1,15 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/list_item_height"
-    android:layout_marginLeft="@dimen/margin_medium"
-    android:layout_marginRight="@dimen/margin_medium"
-    android:gravity="center_vertical">
+    android:layout_height="wrap_content"
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="HELLO"/>
+>
+
+    <ImageView
+        android:id="@+id/image_view"
+         android:layout_width="match_parent"
+         android:layout_height="wrap_content"
+         android:adjustViewBounds="true"
+         android:scaleType="centerCrop"
+         />
 </FrameLayout>
